--- a/WildGunmanGang/WildGunmanGang/WildGunmanGang.vcxproj
+++ b/WildGunmanGang/WildGunmanGang/WildGunmanGang.vcxproj
@@ -130,15 +130,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Objective.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ObjectivePool.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Enums.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Objective.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="ObjectivePool.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Enums.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
