--- a/WildGunmanGang/WildGunmanGang/WildGunmanGang.vcxproj.filters
+++ b/WildGunmanGang/WildGunmanGang/WildGunmanGang.vcxproj.filters
@@ -33,10 +33,10 @@
     <ClCompile Include="ObjectiveManager.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Positions.cpp">
+    <ClCompile Include="Position.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Position.cpp">
+    <ClCompile Include="Common.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
@@ -60,6 +60,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Position.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Common.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
