--- a/WildGunmanGang/WildGunmanGang/WildGunmanGang.vcxproj
+++ b/WildGunmanGang/WildGunmanGang/WildGunmanGang.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Data.cpp" />
     <ClCompile Include="Position.cpp" />
     <ClCompile Include="TitleScreen.cpp" />
+    <ClCompile Include="UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h" />
@@ -150,6 +151,7 @@
     <ClInclude Include="Position.h" />
     <ClInclude Include="TitleScreen.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="UIManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
